--- a/02. Tic tac toe/style.css
+++ b/02. Tic tac toe/style.css
@@ -92,7 +92,7 @@ main {
     gap: 1em;
 }
 
-.board .cell {
+.board .celda {
     cursor: pointer;
     background-color: var(--board);
     display: flex;
@@ -105,11 +105,11 @@ main {
     transition: transform 0.15s ease;
 }
 
-.board .cell:hover {
+.board .celda:hover {
     background-color: var(--highliter);
 }
 
-.board .cell:active {
+.board .celda:active {
     transform: scale(0.9);
 }
 
@@ -165,6 +165,7 @@ table {
     color: var(--violeta);
 }
 
+ /* para dispositivos moviles */
 @media (max-width: 768px) {
 
     header {
@@ -173,8 +174,8 @@ table {
 
     .demas {
         margin-top: 3em;
-        flex-direction: column; /* Coloca los elementos en una columna */
-        align-items: center; /* Alinea los elementos al centro */
+        flex-direction: column;
+        align-items: center;
     }
 
     .leadboard {
